--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="css/cardstarter.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script defer src="js/main.js"></script>
-    <title>Let's Make a Div!!!!!</title>
+    <title>Flipping-Awesome!</title>
 </head>
 <body>
     <div class="card d05 large shadow"></div>
